[package]
name = "kvs"
version = "0.1.0"
authors = ["ParkSB <parkgds@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.6"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
